--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,10 @@
   }
 
   body {
-    @apply font-sans antialiased bg-background text-foreground;
+    @apply font-['Roboto'] antialiased bg-background text-foreground;
   }
+}
+
+.font-roboto {
+  font-family: 'Roboto', sans-serif;
 }
